proyecto1/src/objects/Proyecto__c.object
<CustomObject>
    <fields>
        <fullName>Cliente__c</fullName>
        <label>Cuenta</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Cliente</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Proyectos</relationshipLabel>
        <relationshipName>Proyectos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Consultor_de_venta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultor de venta</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Proyectos</relationshipLabel>
        <relationshipName>Proyectos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coste__c</fullName>
        <label>Coste</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Descripci_n__c</fullName>
        <label>Descripción</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fecha_de_fin__c</fullName>
        <label>Fecha de fin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_inicio__c</fullName>
        <label>Fecha de inicio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Precio__c</fullName>
        <label>Precio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tipo_de_proyecto__c</fullName>
        <label>Tipo de proyecto</label>
        <picklist>
            <picklistValues>
                <fullName>Implantación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuración</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo_de_servicio__c</fullName>
        <label>Tipo de servicio</label>
        <picklist>
            <picklistValues>
                <fullName>Implantación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuración</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Proyecto</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Nombre de Proyecto</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proyectos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>